# chrome-devtools-mcp-canpoint

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
chrome_devtools_mcp_canpoint-0.1.0/src/chrome_devtools_mcp_canpoint/: cli.py
docs/: mcp-startup-debug-summary.md  pypi-release.md
docs/reference/: 0.1.3-design-requirements.md
docs/superpowers/plans/: 2026-07-01-session-chrome-mcp-wrapper.md  2026-07-02-pypi-packaging.md  2026-07-03-profile-modes.md  2026-07-08-lazy-chrome-start.md
docs/superpowers/specs/: 2026-07-08-lazy-chrome-start-design.md
src/chrome_devtools_mcp_canpoint/: __init__.py  _tools_list_fallback.json  cli.py
tests/: test_main.py
